Add config to build jlink image